src/objects/QPMS__Criteria__c.object
<CustomObject>
    <description>Criteria</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Type__c</fullName>
        <description>Criteria Type</description>
        <inlineHelpText>Criteria Type</inlineHelpText>
        <label>Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <description>Measurement</description>
        <inlineHelpText>Measurement</inlineHelpText>
        <label>Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Severity</label>
        <referenceTo>QPMS__Risk_Severity__c</referenceTo>
        <relationshipLabel>Criterias</relationshipLabel>
        <relationshipName>Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Minus__c</fullName>
        <description>Tolerance_Minus</description>
        <inlineHelpText>Tolerance_Minus</inlineHelpText>
        <label>Tolerance (-)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Plus__c</fullName>
        <description>Tolerance(+)</description>
        <inlineHelpText>Tolerance(+)</inlineHelpText>
        <label>Tolerance(+)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__UOM__c</fullName>
        <description>Unit Of Measurement</description>
        <inlineHelpText>Unit Of Measurement</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Criteria</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Active__c</columns>
        <columns>QPMS__Criteria_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QPMS__Criteria</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>QPMS__Measurement__c</columns>
        <columns>QPMS__Tolerance_Minus__c</columns>
        <columns>QPMS__Tolerance_Plus__c</columns>
        <columns>QPMS__UOM__c</columns>
        <filterScope>Everything</filterScope>
        <label>Criteria</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criterias</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Calibration</fullName>
        <active>true</active>
        <description>Calibration</description>
        <label>Calibration</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Inspection</fullName>
        <active>true</active>
        <description>Inspection</description>
        <label>Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Maintenance</fullName>
        <active>true</active>
        <description>Maintenance</description>
        <label>Maintenance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Maintenance_Criteria_Variable_Validation</fullName>
        <active>true</active>
        <description>For Maintenance record type variable is not needed</description>
        <errorConditionFormula>AND(NOT($Permission.QPMS__Show_Maintenance_Variable),ISPICKVAL(QPMS__Criteria_Type__c,&apos;Variable&apos;), RecordType.DeveloperName =&apos;Maintenance&apos;)</errorConditionFormula>
        <errorMessage>If you want to save Criteria Type Variable For Maintenance you should have Show Maintenance Variable Custom permission.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Measurement_and_UOM_are_required</fullName>
        <active>true</active>
        <description>Measurement and UOM are Required For Variable Type Criteria.</description>
        <errorConditionFormula>AND(ISPICKVAL(QPMS__Criteria_Type__c,&apos;Variable&apos;),OR(ISBLANK( QPMS__Measurement__c ),ISBLANK( TEXT(QPMS__UOM__c))))</errorConditionFormula>
        <errorMessage>Measurement and UOM are Required For Variable Type Criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Tolerance_Special_Symbols</fullName>
        <active>true</active>
        <description>Tolerance Special Symbols</description>
        <errorConditionFormula>OR( CONTAINS( TEXT(QPMS__Tolerance_Plus__c) , &apos;+&apos;) , CONTAINS( TEXT(QPMS__Tolerance_Plus__c) , &apos;-&apos;), CONTAINS( TEXT(QPMS__Tolerance_Minus__c) , &apos;+&apos;),CONTAINS( TEXT(QPMS__Tolerance_Minus__c) , &apos;-&apos;))</errorConditionFormula>
        <errorMessage>Please do not enter + and - symbols for tolerance as it is already mentioned in Field Name</errorMessage>
    </validationRules>
</CustomObject>